src/main/java/ru/hse/nml/grammar/NmlParser.java
// Generated from /Users/tomoo/proj/ru.hse.nml/src/main/antlr/ru/hse/nml/NmlParser.g4 by ANTLR 4.8
package ru.hse.nml.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LET=1, TYPE=2, MEM=3, REG=4, VAR=5, ALIAS=6, MODE=7, OP=8, PSEUDO=9, INTERNAL=10, 
		LABEL=11, STRUCT=12, SYNTAX=13, IMAGE=14, ACTION=15, BOOL=16, CARD=17, 
		FIX=18, FLOAT=19, INT=20, ENUM=21, WS=22, BLOCK_COMMENT=23, LINE_COMMENT=24, 
		LPAREN=25, RPAREN=26, LBRACE=27, RBRACE=28, LBRACK=29, RBRACK=30, SEMI=31, 
		COMMA=32, DOT=33, QOAT=34, ASSIGN=35, PLUS=36, MINUS=37, MUL=38, DIV=39, 
		REM=40, DOUBLE_STAR=41, LEFT_SHIFT=42, RIGHT_SHIFT=43, ROTATE_LEFT=44, 
		ROTATE_RIGHT=45, LE=46, GRE=47, LEQ=48, GREQ=49, EQ=50, NEQ=51, NOT=52, 
		IF=53, THEN=54, ELSE=55, ENDIF=56, AND=57, OR=58, TILDE=59, AMPER=60, 
		UP_ARROW=61, VERT_BAR=62, DOUBLE_DOT=63, TRIPLE_DOT=64, DOUBLE_COLON=65, 
		COLON=66, IS_TYPE=67, TYPE_OF=68, SIZE_OF=69, SQRT=70, ROUND=71, IS_NAN=72, 
		IS_SIGN_NAN=73, SIGN_EXTEND=74, ZERO_EXTEND=75, COERCE=76, CAST=77, INT_TO_FLOAT=78, 
		FLOAT_TO_INT=79, FLOAT_TO_FLOAT=80, FORMAT=81, TRACE=82, EXCEPTION=83, 
		MARK=84, UNPREDICTED=85, UNDEFINED=86, ASSERT=87, FUNCTION=88, SHARED=89, 
		REVISION=90, STRING_LITERAL=91, ID=92, NUMBER_LITERAL=93, DECIMAL_LITERAL=94, 
		HEX_LITERAL=95, BINARY_LITERAL=96, REV=97, ELIF=98, MULTIPLY=99, DIVIDE=100;
	public static final int
		RULE_specification = 0, RULE_declaration = 1, RULE_letDef = 2, RULE_letExpr = 3, 
		RULE_typeDef = 4, RULE_typeExpr = 5, RULE_typeExprDataType = 6, RULE_typeExprValue = 7, 
		RULE_memDef = 8, RULE_memAccess = 9, RULE_memSize = 10, RULE_memType = 11, 
		RULE_varDef = 12, RULE_varSizeType = 13, RULE_regDef = 14, RULE_regSize = 15, 
		RULE_regType = 16, RULE_modeDef = 17, RULE_modeAccess = 18, RULE_modeType = 19, 
		RULE_modeOr = 20, RULE_modeAnd = 21, RULE_modeParamList = 22, RULE_modeAssignPart = 23, 
		RULE_modeAssignPartMini = 24, RULE_modeAttrList = 25, RULE_assignInitPart = 26, 
		RULE_modeSyntaxPart = 27, RULE_modeImagePart = 28, RULE_modeActionPart = 29, 
		RULE_modeRev = 30, RULE_modeSyntax = 31, RULE_modeImage = 32, RULE_modeAction = 33, 
		RULE_opDef = 34, RULE_opAccess = 35, RULE_opType = 36, RULE_opAndRule = 37, 
		RULE_opOrRule = 38, RULE_opParameterList = 39, RULE_opParameter = 40, 
		RULE_opAttrList = 41, RULE_opSyntax = 42, RULE_opImage = 43, RULE_opAction = 44, 
		RULE_sequence = 45, RULE_statement = 46, RULE_regularStatement = 47, RULE_callStatement = 48, 
		RULE_assignStatement = 49, RULE_assignStatementRightParen = 50, RULE_assignStatementRight = 51, 
		RULE_assignStatementRightVar = 52, RULE_exceptionStatement = 53, RULE_markStatement = 54, 
		RULE_conditionalStatement = 55, RULE_booleanState = 56, RULE_booleanVal = 57, 
		RULE_elifState = 58, RULE_format = 59, RULE_formatString = 60, RULE_formatParameter = 61, 
		RULE_formatParameterMini = 62, RULE_syntaImageActionCall = 63, RULE_sIAPar = 64, 
		RULE_sIAParMini = 65, RULE_modeCall = 66, RULE_location = 67, RULE_locationNoDot = 68, 
		RULE_locationDCol = 69, RULE_locationDColNoDot = 70, RULE_zero_extend = 71, 
		RULE_sign_extend = 72, RULE_coerce = 73, RULE_coerceType = 74, RULE_coerceNumber = 75, 
		RULE_cast = 76, RULE_castType = 77, RULE_castNumberPart = 78, RULE_castNumber = 79, 
		RULE_trace = 80, RULE_traceString = 81, RULE_traceVars = 82, RULE_traceVar = 83, 
		RULE_memoryAddressDCol = 84, RULE_memoryAddress = 85, RULE_memTypePart = 86, 
		RULE_operatorArith = 87, RULE_operatorCompare = 88, RULE_numberExpr = 89;
	private static String[] makeRuleNames() {
		return new String[] {
			"specification", "declaration", "letDef", "letExpr", "typeDef", "typeExpr", 
			"typeExprDataType", "typeExprValue", "memDef", "memAccess", "memSize", 
			"memType", "varDef", "varSizeType", "regDef", "regSize", "regType", "modeDef", 
			"modeAccess", "modeType", "modeOr", "modeAnd", "modeParamList", "modeAssignPart", 
			"modeAssignPartMini", "modeAttrList", "assignInitPart", "modeSyntaxPart", 
			"modeImagePart", "modeActionPart", "modeRev", "modeSyntax", "modeImage", 
			"modeAction", "opDef", "opAccess", "opType", "opAndRule", "opOrRule", 
			"opParameterList", "opParameter", "opAttrList", "opSyntax", "opImage", 
			"opAction", "sequence", "statement", "regularStatement", "callStatement", 
			"assignStatement", "assignStatementRightParen", "assignStatementRight", 
			"assignStatementRightVar", "exceptionStatement", "markStatement", "conditionalStatement", 
			"booleanState", "booleanVal", "elifState", "format", "formatString", 
			"formatParameter", "formatParameterMini", "syntaImageActionCall", "sIAPar", 
			"sIAParMini", "modeCall", "location", "locationNoDot", "locationDCol", 
			"locationDColNoDot", "zero_extend", "sign_extend", "coerce", "coerceType", 
			"coerceNumber", "cast", "castType", "castNumberPart", "castNumber", "trace", 
			"traceString", "traceVars", "traceVar", "memoryAddressDCol", "memoryAddress", 
			"memTypePart", "operatorArith", "operatorCompare", "numberExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'let'", "'type'", "'mem'", "'reg'", "'var'", "'alias'", "'mode'", 
			"'op'", "'pseudo'", "'internal'", "'label'", "'struct'", "'syntax'", 
			"'image'", "'action'", "'bool'", "'card'", "'fix'", "'float'", "'int'", 
			"'enum'", null, null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"';'", "','", "'.'", "'\"'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'**'", "'<<'", "'>>'", "'<<<'", "'>>>'", "'<'", "'>'", "'<='", "'>='", 
			"'=='", "'!='", "'!'", "'if'", "'then'", "'else'", "'endif'", "'&&'", 
			"'||'", "'~'", "'&'", "'^'", "'|'", "'..'", "'...'", "'::'", "':'", "'is_type'", 
			"'type_of'", "'size_of'", "'sqrt'", "'round'", "'is_nan'", "'is_signaling_nan'", 
			"'sign_extend'", "'zero_extend'", "'coerce'", "'cast'", "'int_to_float'", 
			"'float_to_int'", "'float_to_float'", "'format'", "'trace'", "'exception'", 
			"'mark'", "'unpredicted'", "'undefined'", "'assert'", "'function'", "'shared'", 
			"'@rev'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LET", "TYPE", "MEM", "REG", "VAR", "ALIAS", "MODE", "OP", "PSEUDO", 
			"INTERNAL", "LABEL", "STRUCT", "SYNTAX", "IMAGE", "ACTION", "BOOL", "CARD", 
			"FIX", "FLOAT", "INT", "ENUM", "WS", "BLOCK_COMMENT", "LINE_COMMENT", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", 
			"DOT", "QOAT", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", "REM", "DOUBLE_STAR", 
			"LEFT_SHIFT", "RIGHT_SHIFT", "ROTATE_LEFT", "ROTATE_RIGHT", "LE", "GRE", 
			"LEQ", "GREQ", "EQ", "NEQ", "NOT", "IF", "THEN", "ELSE", "ENDIF", "AND", 
			"OR", "TILDE", "AMPER", "UP_ARROW", "VERT_BAR", "DOUBLE_DOT", "TRIPLE_DOT", 
			"DOUBLE_COLON", "COLON", "IS_TYPE", "TYPE_OF", "SIZE_OF", "SQRT", "ROUND", 
			"IS_NAN", "IS_SIGN_NAN", "SIGN_EXTEND", "ZERO_EXTEND", "COERCE", "CAST", 
			"INT_TO_FLOAT", "FLOAT_TO_INT", "FLOAT_TO_FLOAT", "FORMAT", "TRACE", 
			"EXCEPTION", "MARK", "UNPREDICTED", "UNDEFINED", "ASSERT", "FUNCTION", 
			"SHARED", "REVISION", "STRING_LITERAL", "ID", "NUMBER_LITERAL", "DECIMAL_LITERAL", 
			"HEX_LITERAL", "BINARY_LITERAL", "REV", "ELIF", "MULTIPLY", "DIVIDE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NmlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SpecificationContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(NmlParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NmlParserListener ) ((NmlParserListener)listener).enterSpecification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NmlParserListener ) ((NmlParserListener)listener).exitSpecification(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NmlParserVisitor ) return ((NmlParserVisitor<? extends T>)visitor).visitSpecification(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecificationContext specification() throws RecognitionException {
		SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_specification);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LET) | (1L << TYPE) | (1L << MEM) | (1L << REG) | (1L << VAR) | (1L << MODE) | (1L << OP) | (1L << PSEUDO) | (1L << INTERNAL) | (1L << LABEL))) != 0) || _la==SHARED) {
				{
				{
				setState(180);
				declaration();
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(186);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public LetDefContext letDef() {
			return getRuleContext(LetDefContext.class,0);
		}
		public TypeDefContext typeDef() {
			return getRuleContext(TypeDefContext.class,0);
		}
		public MemDefContext memDef() {
			return getRuleContext(MemDefContext.class,0);
		}
		public RegDefContext regDef() {
			return getRuleContext(RegDefContext.class,0);
		}
		public VarDefContext varDef() {
			return getRuleContext(VarDefContext.class,0);
		}
		public ModeDefContext modeDef() {
			return getRuleContext(ModeDefContext.class,0);
		}
		public OpDefContext opDef() {
			return getRuleContext(OpDefContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NmlParserListener ) ((NmlParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NmlParserListener ) ((NmlParserListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NmlParserVisitor ) return ((NmlParserVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(195);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				enterOuterAlt(_localctx, 1);
				{
				setState(188);
				letDef();
				}
				break;
			case TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(189);
				typeDef();
				}
				break;
			case MEM:
			case SHARED:
				enterOuterAlt(_localctx, 3);
				{
				setState(190);
				memDef();
				}
				break;
			case REG:
				enterOuterAlt(_localctx, 4);
				{
				setState(191);
				regDef();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 5);
				{
				setState(192);
				varDef();
				}
				break;
			case MODE:
			case LABEL:
				enterOuterAlt(_localctx, 6);
				{
				setState(193);
				modeDef();
				}
				break;
			case OP:
			case PSEUDO:
			case INTERNAL:
				enterOuterAlt(_localctx, 7);
				{
				setState(194);
				opDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetDefContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(NmlParser.LET, 0); }
		public TerminalNode ID() { return getToken(NmlParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(NmlParser.ASSIGN, 0); }
		public LetExprContext letExpr() {
			return getRuleContext(LetExprContext.class,0);
		}
		public LetDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NmlParserListener ) ((NmlParserListener)listener).enterLetDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NmlParserListener ) ((NmlParserListener)listener).exitLetDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NmlParserVisitor ) return ((NmlParserVisitor<? extends T>)visitor).visitLetDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetDefContext letDef() throws RecognitionException {
		LetDefContext _localctx = new LetDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_letDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			match(LET);
			setState(198);
			match(ID);
			setState(199);
			match(ASSIGN);
			setState(200);
			letExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetExprContext extends ParserRuleContext {
		public NumberExprContext numberExpr() {
			return getRuleContext(NumberExprContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(NmlParser.STRING_LITERAL, 0); }
		public LetExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NmlParserListener ) ((NmlParserListener)listener).enterLetExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NmlParserListener ) ((NmlParserListener)listener).exitLetExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NmlParserVisitor ) return ((NmlParserVisitor<? extends T>)visitor).visitLetExpr(this);
			else return visitor.visitChildren(this);
		}
	}
